--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+
+.content {
+    min-height: calc(100vh - 90px - 250px);
+}
+
+.catTitle{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 34px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #264653;
+    justify-content: center;
+}
+
+.catSpace{
+    height: 1px;
+    width: 100%;
+    background-color: #264653;
+    margin-top: 4px;
+}
