--- a/src/app/doacao/doacao.component.html
+++ b/src/app/doacao/doacao.component.html
@@ -15,7 +15,9 @@
     <h5>Celular: (14) 99195-6161</h5>
     <h5>CPF: (14) 99195-6161</h5>
 
+    <br>
 
+    <h5>Com sua doação, você estará ajudando a gente comprar ração para nossos animais, pagar aluguel do abrigo, e gastos com veterinários.</h5>
 
 </div>
 <app-footer></app-footer>
