--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -8,7 +8,7 @@
         <div class="catSpace"></div>
     </div>
 
-    <h5 class="mt-5">A prana Pet é uma ONG que procura salva e ajudar animais abandonados que precisam de ajuda e suporte.</h5>
+    <h5 class="mt-5">A prana Pet é uma ONG de Bauru, interior de São Paulo, que procura salva e ajudar animais abandonados pela sociedade que precisam de ajuda e suporte.</h5>
   
 </div>
 <app-footer></app-footer>
