--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,9 +6,9 @@
             <div>
                 <h2 class="white" style="font-weight: 600; color: white;">REDES SOCIAIS</h2>
                 <div class="d-flex justify-content-center mt-3">
-                    <ion-icon name="logo-facebook" style="font-size: 28px; color: white; cursor: pointer;"></ion-icon>
-                    <ion-icon name="logo-instagram" style="font-size: 28px; color: white; margin-left: 17px; cursor: pointer;"></ion-icon>
-                    <ion-icon name="logo-whatsapp" style="font-size: 28px; color: white; margin-left: 17px; cursor: pointer;"></ion-icon>
+                    <ion-icon name="logo-facebook" style="font-size: 28px; color: white; cursor: pointer;" (click)="goTo('https://www.facebook.com/pranapetbauru/')"></ion-icon>
+                    <ion-icon name="logo-instagram" style="font-size: 28px; color: white; margin-left: 17px; cursor: pointer;" (click)="goTo('https://www.instagram.com/pranapetbauru/?fbclid=IwAR3GvhodASCfWgWO2AA5W5gS4q36KzKHuixZNvuIrsAVUHjbw16o2x-03Qs')"></ion-icon>
+                    <ion-icon name="logo-whatsapp" style="font-size: 28px; color: white; margin-left: 17px; cursor: pointer;" (click)="goTo('https://api.whatsapp.com/send?phone=5514991956161')"></ion-icon>
                 </div>
             </div>
 
