--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,12 +25,12 @@
                 <span class="itemText">Início</span>
             </div>
 
-            <div class="itemSide" [routerLink]="['/cursos']">
+            <div class="itemSide" [routerLink]="['/sobre']">
                 <ion-icon name="help-outline"></ion-icon>
                 <span class="itemText">Sobre</span>
             </div>
 
-            <div class="itemSide" [routerLink]="['/ajuda']">
+            <div class="itemSide" [routerLink]="['/doacao']">
                 <ion-icon name="wallet-outline"></ion-icon>
                 <span class="itemText">Doações</span>
             </div>
