--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -10,5 +10,35 @@
 
     <h5 class="mt-5">A prana Pet é uma ONG de Bauru, interior de São Paulo, que procura salva e ajudar animais abandonados pela sociedade que precisam de ajuda e suporte.</h5>
   
+    <br><br><br>
+
+    <div class="d-block catTitle" style="text-align: left !important; font-size: 22px;">Alguns dos nossos animais resgatados:</div>
+    <br>
+    <div>
+        <div class="row">
+            <div class="col-md-4" style="display: flex; justify-content: center;">
+                <div style="width: 18rem;">
+                    <img src="https://i.imgur.com/BkOSgf5.jpg" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-md-4" style="display: flex; justify-content: center;">
+                <div style="width: 18rem;">
+                    <img src="https://i.imgur.com/5dA4NVv.jpg" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-md-4 mt-1" style="display: flex; justify-content: center;">
+                <div style="width: 18rem;">
+                    <img src="https://i.imgur.com/Rdwjerd.jpg" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-md-4 mt-1" style="display: flex; justify-content: center;">
+                <div style="width: 18rem;">
+                    <img src="https://i.imgur.com/7rr2ol2.jpg" class="card-img-top" alt="...">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br><br>
 </div>
 <app-footer></app-footer>
