--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -9,6 +9,10 @@
     </div>
 
     <h5 class="mt-5">A prana Pet é uma ONG de Bauru, interior de São Paulo, que procura salva e ajudar animais abandonados pela sociedade que precisam de ajuda e suporte.</h5>
+
+    <h5>Nossa missão começou há mais de 10 anos, fruto do nosso amor pelos animais, e como forma de ajudar esses animais em condição de abandono.</h5>
+
+    <h5>Tivemos grande apoio no início para abrir uma ONG, mas com o passar do tempo os gastos aumentaram e poucos continuaram dispostos a ajudar. Hoje utilizamos cerca de duas toneladas de ração por mês, alem dos gastos veterinários e de castração, custeados por nós e pelas doação que recebemos.</h5>
   
     <br><br><br>
 
