--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
     <div class="part2" style="height: 600px; width: 100%;">
         <br>
         <div class="container">
-            <h2 style="color: rgb(255, 255, 255); margin-top: 50px;">Somos uma ONG que ajuda a <br> salvar a vida de centenas <br> de animais</h2>
+            <h2 style="color: rgb(255, 255, 255); margin-top: 50px;">Somos um abrigo que ajuda a <br> salvar a vida de centenas <br> de animais</h2>
             <br>
             <div class="btnDoar" style="width: 147px;" [routerLink]="['/sobre']">SAIBA MAIS</div>
         </div>
